<resources>
    <string name="app_name">HabitTracker</string>
    <string name="login_title">Login</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="register_redirect">Don\'t have an account? Register here</string>
    <string name="register_button">Register</string>

</resources>
